--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^5.0.15",
     "babel-plugin-styled-components": "^2.1.4",
+    "framer-motion": "^10.16.5",
     "gatsby": "^5.12.4",
     "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-manifest": "^5.12.3",
@@ -27,12 +29,21 @@
     "gatsby-transformer-sharp": "^5.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.1"
+    "react-intersection-observer": "^9.5.3",
+    "react-responsive": "^9.0.2",
+    "styled-components": "^6.1.1",
+    "styled-normalize": "^8.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-responsive": "^8.0.8",
+    "@types/styled-components": "^5.1.30",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.54.0",
+    "eslint-plugin-react": "^7.33.2",
     "typescript": "^5.1.6"
   }
 }
