--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-responsive": "^9.0.2",
+    "react-text-transition": "^3.1.0",
     "styled-components": "^6.1.1",
     "styled-normalize": "^8.1.0"
   },
@@ -43,7 +44,10 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.1.0",
     "typescript": "^5.1.6"
   }
 }
