--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
+    "gatsby-plugin-tsconfig-paths": "^1.0.6",
     "prettier": "^3.1.0",
     "typescript": "^5.1.6"
   }
