--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-responsive": "^9.0.2",
     "react-text-transition": "^3.1.0",
+    "smooth-scrollbar": "^8.8.4",
     "styled-components": "^6.1.1",
     "styled-normalize": "^8.1.0"
   },
