--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "@fontsource/montserrat": "^5.0.15",
+    "@react-three/drei": "^9.92.3",
+    "@react-three/fiber": "^8.15.12",
+    "@react-three/offscreen": "^0.0.8",
     "@studio-freight/lenis": "^1.0.29",
     "babel-plugin-styled-components": "^2.1.4",
     "framer-motion": "^10.16.5",
@@ -34,7 +37,8 @@
     "react-responsive": "^9.0.2",
     "react-text-transition": "^3.1.0",
     "styled-components": "^6.1.1",
-    "styled-normalize": "^8.1.0"
+    "styled-normalize": "^8.1.0",
+    "three": "^0.159.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
@@ -42,6 +46,7 @@
     "@types/react-dom": "^18.2.6",
     "@types/react-responsive": "^8.0.8",
     "@types/styled-components": "^5.1.30",
+    "@types/three": "^0.159.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.54.0",
@@ -50,6 +55,7 @@
     "eslint-plugin-react": "^7.33.2",
     "gatsby-plugin-tsconfig-paths": "^1.0.6",
     "prettier": "^3.1.0",
+    "three-stdlib": "^2.28.7",
     "typescript": "^5.1.6"
   }
 }
